Fix translation crash

--- a/power/src/locales/messages.en.xlf
+++ b/power/src/locales/messages.en.xlf
@@ -41,7 +41,8 @@
       <notes>
         <note category="location">src/app/app.component.html:144</note>
         <note category="location">src/app/static/feedback/feedback.component.html:4</note>
-        <note category="location">src/app/static/start/start.component.html:93</note>
+        <note category="location">src/app/static/start/start.component.html:94</note>
+        <note category="location">src/app/static/start/start.component.html:99</note>
       </notes>
       <segment state="translated">
         <source>Feedback</source>
@@ -110,8 +111,8 @@
         <note category="location">src/app/app.component.html:409</note>
         <note category="location">src/app/static/start/start.component.html:10</note>
         <note category="location">src/app/static/start/start.component.html:19</note>
-        <note category="location">src/app/static/start/start.component.html:139</note>
-        <note category="location">src/app/static/start/start.component.html:146</note>
+        <note category="location">src/app/static/start/start.component.html:140</note>
+        <note category="location">src/app/static/start/start.component.html:147</note>
       </notes>
       <segment state="translated">
         <source>Bodenrichtwerte</source>
@@ -204,8 +205,10 @@
         <note category="location">src/app/fragebogen/dashboard/dashboard.component.html:433</note>
         <note category="location">src/app/fragebogen/public-dashboard/public-dashboard.component.html:19</note>
         <note category="location">src/app/static/start/start.component.html:73</note>
-        <note category="location">src/app/static/start/start.component.html:299</note>
-        <note category="location">src/app/static/start/start.component.html:306</note>
+        <note category="location">src/app/static/start/start.component.html:78</note>
+        <note category="location">src/app/static/start/start.component.html:240</note>
+        <note category="location">src/app/static/start/start.component.html:298</note>
+        <note category="location">src/app/static/start/start.component.html:305</note>
       </notes>
       <segment state="translated">
         <source>Formulare</source>
@@ -2280,7 +2283,7 @@
     <unit id="2408914290675512706">
       <notes>
         <note category="location">src/app/fragebogen/home/home.component.html:38</note>
-        <note category="location">src/app/static/start/start.component.html:256</note>
+        <note category="location">src/app/static/start/start.component.html:255</note>
       </notes>
       <segment state="translated">
         <source>Eingabefeld für eine Formular PIN, um zum entsprechenden Formular zu gelangen.</source>
@@ -2290,7 +2293,7 @@
     <unit id="3438075409129621721">
       <notes>
         <note category="location">src/app/fragebogen/home/home.component.html:48</note>
-        <note category="location">src/app/static/start/start.component.html:267</note>
+        <note category="location">src/app/static/start/start.component.html:266</note>
       </notes>
       <segment state="translated">
         <source>Formular PIN</source>
@@ -2301,8 +2304,8 @@
       <notes>
         <note category="location">src/app/fragebogen/home/home.component.html:54</note>
         <note category="location">src/app/fragebogen/home/home.component.html:55</note>
+        <note category="location">src/app/static/start/start.component.html:273</note>
         <note category="location">src/app/static/start/start.component.html:274</note>
-        <note category="location">src/app/static/start/start.component.html:275</note>
       </notes>
       <segment state="translated">
         <source>PIN absenden</source>
@@ -3298,7 +3301,7 @@
         <note category="location">src/app/static/start/start.component.html:24</note>
         <note category="location">src/app/static/start/start.component.html:45</note>
         <note category="location">src/app/static/start/start.component.html:66</note>
-        <note category="location">src/app/static/start/start.component.html:86</note>
+        <note category="location">src/app/static/start/start.component.html:87</note>
       </notes>
       <segment state="initial">
         <source>Zur Anwendung</source>
@@ -3309,8 +3312,8 @@
       <notes>
         <note category="location">src/app/static/start/start.component.html:52</note>
         <note category="location">src/app/static/start/start.component.html:61</note>
-        <note category="location">src/app/static/start/start.component.html:219</note>
-        <note category="location">src/app/static/start/start.component.html:226</note>
+        <note category="location">src/app/static/start/start.component.html:218</note>
+        <note category="location">src/app/static/start/start.component.html:225</note>
       </notes>
       <segment state="initial">
         <source>Immobilienpreisindex</source>
@@ -3319,8 +3322,8 @@
     </unit>
     <unit id="8668899295247471129">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:81</note>
-        <note category="location">src/app/static/start/start.component.html:245</note>
+        <note category="location">src/app/static/start/start.component.html:82</note>
+        <note category="location">src/app/static/start/start.component.html:244</note>
       </notes>
       <segment state="initial">
         <source>Online Formular Service</source>
@@ -3329,29 +3332,29 @@
     </unit>
     <unit id="2140288706597415247">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:101</note>
+        <note category="location">src/app/static/start/start.component.html:103</note>
       </notes>
       <segment state="initial">
         <source>Fehler oder Vorschlag einreichen</source>
         <target>Fehler oder Vorschlag einreichen</target>
       </segment>
     </unit>
+    <unit id="66507597229627698">
+      <notes>
+        <note category="location">src/app/static/start/start.component.html:104</note>
+      </notes>
+      <segment state="initial">
+        <source>Wir schätzen Ihr Feedback sehr, bitte helfen Sie uns unseren Service zu verbessern!</source>
+        <target>Wir schätzen Ihr Feedback sehr, bitte helfen Sie uns unseren Service zu verbessern!</target>
+      </segment>
+    </unit>
     <unit id="8958542581152290460">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:106</note>
+        <note category="location">src/app/static/start/start.component.html:108</note>
       </notes>
       <segment state="initial">
         <source>Zum Feedback</source>
         <target>Zum Feedback</target>
-      </segment>
-    </unit>
-    <unit id="6506485443733430601">
-      <notes>
-        <note category="location">src/app/static/start/start.component.html:121,122</note>
-      </notes>
-      <segment state="initial">
-        <source><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>" dispEnd="&lt;/span>">BORIS</pc><pc id="1" equivStart="START_TAG_SPAN_1" equivEnd="CLOSE_TAG_SPAN_1" type="other" dispStart="&lt;span style=&quot;color: #c4153a;&quot;>">.NI</pc></source>
-        <target><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>" dispEnd="&lt;/span>">BORIS</pc><pc id="1" equivStart="START_TAG_SPAN_1" equivEnd="CLOSE_TAG_SPAN_1" type="other" dispStart="&lt;span style=&quot;color: #c4153a;&quot;>">.NI</pc></target>
       </segment>
     </unit>
     <unit id="721112232605066566">
@@ -3520,7 +3523,7 @@
     </unit>
     <unit id="2078906062700177291">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:126</note>
+        <note category="location">src/app/static/start/start.component.html:127</note>
       </notes>
       <segment state="translated">
         <source>Bodenrichtwertinformationssystem Niedersachsen</source>
@@ -3529,21 +3532,12 @@
     </unit>
     <unit id="1041084297473454291">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:128,131</note>
-        <note category="location">src/app/static/start/start.component.html:167,170</note>
+        <note category="location">src/app/static/start/start.component.html:129</note>
+        <note category="location">src/app/static/start/start.component.html:167</note>
       </notes>
       <segment state="initial">
         <source>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land- und Forstwirtschaft in Niedersachsen, Bremen und Bremerhaven zur Verfügung.</source>
         <target>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land- und Forstwirtschaft in Niedersachsen, Bremen und Bremerhaven zur Verfügung.</target>
-      </segment>
-    </unit>
-    <unit id="4071288484845257437">
-      <notes>
-        <note category="location">src/app/static/start/start.component.html:160,161</note>
-      </notes>
-      <segment state="initial">
-        <source><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>" dispEnd="&lt;/span>">BOWERT</pc><pc id="1" equivStart="START_TAG_SPAN_1" equivEnd="CLOSE_TAG_SPAN_1" type="other" dispStart="&lt;span style=&quot;color: #c4153a;&quot;>">.NI</pc></source>
-        <target><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>" dispEnd="&lt;/span>">BOWERT</pc><pc id="1" equivStart="START_TAG_SPAN_1" equivEnd="CLOSE_TAG_SPAN_1" type="other" dispStart="&lt;span style=&quot;color: #c4153a;&quot;>">.NI</pc></target>
       </segment>
     </unit>
     <unit id="5319420567311553817">
@@ -3555,36 +3549,18 @@
         <target>Bodenwertkalkulator Niedersachsen</target>
       </segment>
     </unit>
-    <unit id="421058201903730999">
-      <notes>
-        <note category="location">src/app/static/start/start.component.html:200,201</note>
-      </notes>
-      <segment state="initial">
-        <source><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #c4153a;&quot;>" dispEnd="&lt;/span>">NI</pc><pc id="1" equivStart="START_TAG_SPAN_1" equivEnd="CLOSE_TAG_SPAN_1" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>">PIX</pc></source>
-        <target><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #c4153a;&quot;>" dispEnd="&lt;/span>">NI</pc><pc id="1" equivStart="START_TAG_SPAN_1" equivEnd="CLOSE_TAG_SPAN_1" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>">PIX</pc></target>
-      </segment>
-    </unit>
     <unit id="2037290745254253445">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:207,211</note>
+        <note category="location">src/app/static/start/start.component.html:206</note>
       </notes>
       <segment state="initial">
         <source>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser, Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</source>
         <target>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser, Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</target>
       </segment>
     </unit>
-    <unit id="4847738171833396199">
-      <notes>
-        <note category="location">src/app/static/start/start.component.html:241</note>
-      </notes>
-      <segment state="initial">
-        <source><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>" dispEnd="&lt;/span>">Formulare</pc></source>
-        <target><pc id="0" equivStart="START_TAG_SPAN" equivEnd="CLOSE_TAG_SPAN" type="other" dispStart="&lt;span style=&quot;color: #343a40;&quot;>" dispEnd="&lt;/span>">Formulare</pc></target>
-      </segment>
-    </unit>
     <unit id="4022690065871451230">
       <notes>
-        <note category="location">src/app/static/start/start.component.html:247,249</note>
+        <note category="location">src/app/static/start/start.component.html:246</note>
       </notes>
       <segment state="initial">
         <source>Hier können öffentliche und private Formulare des LGLN online ausgefüllt und abgeschickt werden. Wenn Sie eine PIN für ein Formular erhalten haben, können Sie diesen direkt über die PIN abrufen und ausfüllen.</source>
@@ -3603,7 +3579,7 @@
     <unit id="2295421029143589974">
       <notes>
         <note category="location">src/app/immobilien/immobilien/immobilien.component.html:2</note>
-        <note category="location">src/app/static/start/start.component.html:205</note>
+        <note category="location">src/app/static/start/start.component.html:204</note>
       </notes>
       <segment state="translated">
         <source>Niedersächsischer Immobilienpreisindex</source>
@@ -3613,7 +3589,7 @@
     <unit id="7567341863769679266">
       <notes>
         <note category="location">src/app/fragebogen/home/home.component.html:69</note>
-        <note category="location">src/app/static/start/start.component.html:289</note>
+        <note category="location">src/app/static/start/start.component.html:288</note>
       </notes>
       <segment state="translated">
         <source>Die PIN absenden</source>
